--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,7 +31,8 @@
   border-radius: 25px;
 }
 footer {
+  margin-top: 2rem;
   text-align: center;
-      background: #f1f1f1;
-    padding: 1rem;
+  background: #f1f1f1;
+  padding: 1rem;
 }
